package alugueis

interface Recomendavel {

    val media: Double

    fun recomendar(nota: Int)
}